--- a/src/index.css
+++ b/src/index.css
@@ -37,13 +37,10 @@
 html,
 body {
     margin: 0;
-    height: 100%;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-}
-
-body {
+    min-height: 100%;
     display: flex;
-    flex-direction: column;
+    flex: 1;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 #root {
